<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:text="José da Silveira"
        app:layout_constraintTop_toBottomOf="@+id/tvNome" />

    <TextView
        android:id="@+id/tvMae"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mae"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/edtNome"
        app:layout_constraintTop_toBottomOf="@+id/edtNome" />

    <EditText
        android:id="@+id/edtMae"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:text="Maria Antonieta"
        app:layout_constraintTop_toBottomOf="@+id/tvMae"/>

    <TextView
        android:id="@+id/tvPai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pai"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/edtMae"
        app:layout_constraintTop_toBottomOf="@+id/edtMae" />

    <EditText
        android:id="@+id/edtPai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        tools:text="Domingos da Silva"
        app:layout_constraintTop_toBottomOf="@+id/tvPai"/>

    <TextView
        android:id="@+id/tvData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data"
        app:layout_constraintStart_toStartOf="@+id/edtMae"
        app:layout_constraintTop_toBottomOf="@+id/edtPai" />

    <EditText
        android:id="@+id/edtData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        tools:text="15/01/1980"
        app:layout_constraintTop_toBottomOf="@+id/tvData"
        />

    <TextView
        android:layout_marginTop="5dp"
        android:id="@+id/tvSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edtData"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/informe_o_sexo" />

    <RadioGroup
        android:id="@+id/rdgSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSexo">

        <RadioButton
            android:id="@+id/rdFeminino"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino"
            />

        <RadioButton
            android:id="@+id/rdMasculino"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feminino" />
    </RadioGroup>

    <Button
        android:id="@+id/btnAtualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/atualizar_certidao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdgSexo" />

    <Button
        android:id="@+id/btnExcluir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorError"
        android:text="@string/excluir_certidao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>